// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package commonsubexpressionelimination;

import "gogoproto/gogo.proto";

option (gogoproto.equal_all) = false;
option (gogoproto.marshaler_all) = true;
option (gogoproto.messagename_all) = true;
option (gogoproto.unmarshaler_all) = true;

message DuplicateDetails {
  // No fields yet.
}
